<resources>
    <string name="app_name">Foody Recipes</string>

    <!-- Bottom Navigation Options Strings-->
    <string name="menu_recipes_option">Recipes</string>
    <string name="menu_favorites_option">Favorites</string>
    <string name="menu_joke_option">Joke</string>

    <!--miscelaneous strings-->
    <string name="floating_action_button_desc">floatingactionbutton</string>
    <string name="image_error_internet_description">errordescription</string>
    <string name="no_internet_connection_text">No internet connection</string>

    <!--Recipes Row Layout Strings-->
    <string name="recipe_image_view_desc">recipeimageviewdesc</string>
    <string name="heart_icon_desc">hearticon</string>
    <string name="recipes_row_layout_vegan_text">Vegan</string>
    <string name="clock_icon_desc">clockicon</string>
    <string name="vegan_icon_desc">veganicon</string>
    <string name="recipe_row_layout_image_view_desc">recipe image view desc</string>
    <string name="recipes_row_layout_likes_image_view_desc">likes image view desc</string>
    <string name="recipes_row_layout_minutes_imageview_desc">minutes imageview desc</string>
    <string name="recipes_row_layout_vegan_imageview_desc">vegan imageview desc</string>

    <!--Bottomsheet Recipes Strings-->
    <!--Meal Type Bottomsheet ChipGroup and Chips Strings-->
    <string name="bottomsheet_meal_type_title_text">Meal Type</string>
    <string name="main_course_ship_text">Main Course</string>
    <string name="side_dish_chip_text">Side Dish</string>
    <string name="dessert_chip_text">Dessert</string>
    <string name="appetizer_chip_text">Appetizer</string>
    <string name="salad_chip_text">Salad</string>
    <string name="bread_chip_text">Bread</string>
    <string name="breakfast_chip_text">Breakfast</string>
    <string name="soup_chip_text">Soup</string>
    <string name="beverage_chip_text">Beverage</string>
    <string name="sauce_chip_text">Sauce</string>
    <string name="marinade_chip_text">Marinade</string>
    <string name="fingerfood_chip_text">Fingerfood</string>
    <string name="snack_chip_text">Snack</string>
    <string name="drink_chip_text">Drink</string>

    <!--Diet Type Bottomsheet ChipGroup and Chips Strings-->
    <string name="bottomsheet_diet_type_title_text">Diet Type</string>
    <string name="gluten_free_chip_text">Gluten Free</string>
    <string name="ketogenic_chip_text">Ketogenic</string>
    <string name="vegetarian_chip_text">Vegetarian</string>
    <string name="lacto_vegetarian_chip_text">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian_chip_text">Ovo-Vegetarian</string>
    <string name="vegan_chip_text">Vegan</string>
    <string name="pescetarian_chip_text">Pescetarian</string>
    <string name="paleo_chip_text">Paleo</string>
    <string name="primal_chip_text">Primal</string>
    <string name="apply_button_text">Apply</string>
    <string name="recipes_menu_search_title">Search</string>

    <!--Overview Fragment Strings-->
    <string name="overview_fragment_vegetarian_tag">Vegetarian</string>
    <string name="overview_fragment_vegan_tag">Vegan</string>
    <string name="overview_fragment_gluten_free_tag">Gluten Free</string>
    <string name="overview_fragment_dairy_free_tag">Dairy Free</string>
    <string name="overview_fragment_healthy_tag">Healthy</string>
    <string name="overview_fragment_cheap_tag">Cheap</string>
    <string name="overview_fragment_image_view_desc">Image view overview</string>
    <string name="overview_fragment_likes_imageview_desc">likes overview imageview</string>
    <string name="overview_fragment_time_imageview_desc">time overview imageview desc</string>
    <string name="overview_fragment_vegetarian_imageview_desc">vegetarian imageview desc</string>
    <string name="overview_fragment_vegan_imageview_desc">vegan imageview desc</string>
    <string name="overview_fragment_gluten_free_imageview_desc">Gluten Free Imageview Desc</string>
    <string name="overview_fragment_dairy_free_imageview_desc">Dairy Free Imageview Desc</string>
    <string name="overview_fragment_healthy_imageview_desc">Healthy Imageview Desc</string>
    <string name="overview_fragment_cheap_imageview_desc">Cheap Imageview desc</string>

    <!--Ingredient Fragment Strings-->
    <string name="ingredient_fragment_ingredient_imageview_desc">Ingredient content desc</string>

    <!--Details Activity Strings-->
    <string name="details_menu_save_favorites">Save to Favorites</string>

    <!--Favorite Recipes Strings-->
    <string name="saved_favorite_recipe_snackbar_message">Saved Recipe.</string>
    <string name="saved_favorite_recipe_snackbar_action">Okay</string>
    <string name="remove_favorite_recipe_snackbar_message">Removed from favorites.</string>
    <string name="no_favorite_recipes_text">No Favorite Recipes</string>
    <string name="no_favorite_recipes_desc">No favorite recipes desc</string>
    <string name="favorite_recipe_image_view_desc">recipeimageviewdesc</string>
    <string name="favorite_heart_icon_desc">hearticon</string>
    <string name="favorite_recipes_row_layout_vegan_text">Vegan</string>
    <string name="favorite_clock_icon_desc">clockicon</string>
    <string name="favorite_vegan_icon_desc">veganicon</string>
    <string name="favorite_recipe_row_layout_image_view_desc">recipe image view desc</string>
    <string name="favorite_recipes_row_layout_likes_image_view_desc">likes image view desc</string>
    <string name="favorite_recipes_row_layout_minutes_imageview_desc">minutes imageview desc</string>
    <string name="favorite_recipes_row_layout_vegan_imageview_desc">vegan imageview desc</string>
    <string name="favorites_recipes_menu_delete_all_favorites">Delete all</string>
    <string name="favorite_recipes_one_item_selected"> item selected</string>
    <string name="favorite_recipes_more_items_selected"> items selected</string>
    <string name="favorite_recipes_item_removed_snackbar"> Recipe/s removed.</string>
    <string name="snackbar_action_okay">Okay.</string>
    <string name="favorite_recipes_menu_delete_all_title">Delete All</string>
    <string name="favorite_recipes_snackbar_delete_all_message">All recipes removed.</string>
    <string name="lorem_ipsum_dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus massa tellus, at auctor nisl pharetra a. Proin a scelerisque mi, vel faucibus dui. Nulla aliquet</string>
    <string name="fragment_food_joke_no_joke_img_desc">no food joke img desc</string>
    <string name="fragment__food_joke_no_joke_found_text">No Food Joke Found</string>
</resources>