<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favoriteRecipesRowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/favoriteRow_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/lightMediumGray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/favoriteRecipe_imageView"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/favorite_recipe_row_layout_image_view_desc"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/favoriteTitle_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/armata"
                    android:maxLines="2"
                    android:textColor="@color/darker"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/favoriteRecipe_imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/favoriteDescription_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textColor="@color/darkGray"
                    app:layout_constraintEnd_toEndOf="@+id/favoriteTitle_textView"
                    app:layout_constraintStart_toStartOf="@+id/favoriteTitle_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteTitle_textView" />

                <ImageView
                    android:id="@+id/favoriteHeart_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="36dp"
                    android:contentDescription="@string/favorite_recipes_row_layout_likes_image_view_desc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/favoriteHeart_textView"
                    app:layout_constraintStart_toStartOf="@+id/favoriteHeart_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteDescription_textView"
                    app:srcCompat="@drawable/ic_heart"
                    app:tint="@color/red" />

                <TextView
                    android:id="@+id/favoriteHeart_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    app:layout_constraintStart_toStartOf="@+id/favoriteDescription_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteHeart_imageView"
                    tools:text="100" />

                <ImageView
                    android:id="@+id/favoriteClock_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/favorite_recipes_row_layout_minutes_imageview_desc"
                    app:layout_constraintEnd_toEndOf="@+id/favoriteClock_textView"
                    app:layout_constraintStart_toStartOf="@+id/favoriteClock_textView"
                    app:layout_constraintTop_toTopOf="@+id/favoriteHeart_imageView"
                    app:srcCompat="@drawable/ic_clock"
                    app:tint="@color/yellow" />

                <TextView
                    android:id="@+id/favoriteClock_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    app:layout_constraintStart_toEndOf="@+id/favoriteHeart_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteClock_imageView"
                    tools:text="100" />

                <ImageView
                    android:id="@+id/favoriteLeaf_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/favorite_recipes_row_layout_vegan_imageview_desc"
                    app:layout_constraintEnd_toEndOf="@+id/favoriteLeaf_textView"
                    app:layout_constraintStart_toStartOf="@+id/favoriteLeaf_textView"
                    app:layout_constraintTop_toTopOf="@+id/favoriteClock_imageView"
                    app:srcCompat="@drawable/ic_vegan" />

                <TextView
                    android:id="@+id/favoriteLeaf_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/favorite_recipes_row_layout_vegan_text"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/favoriteClock_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteLeaf_imageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>